  * Update after landing of bmo: #701875 - Rename omni.jar to omni.ja
    - update debian/firefox.install.in
  * Ensure that the crash reporter is disabled if rebuilt by Ubuntu
    derivatives, as there will be no crash symbols for those
    - update debian/rules
  * Only add "Ubuntu" to the UA string when being built for Ubuntu
    - update debian/rules

  [ Adam Conrad <adconrad@ubuntu.com> ]
  * Add missing build-dep on non-essential locales, since we use it.
    - update debian/control{,.in}

 -- Chris Coulson <chris.coulson@canonical.com>  Tue, 29 Nov 2011 11:49:33 +0000

firefox-trunk (10.0~a1~hg20111108r79928-0ubuntu1) oneiric; urgency=low

  * New upstream snapshot v10.0 A1 HG20111108R79928

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Update globalmenu-extension to 2.5 prerelease r264
    - Fix LP: #864511 - Icons not displayed in history/bookmarks menus
  * Make sure the filename of our symbol index is of the format that
    upstream expects
    - update debian/patches/change-moz-app-name.patch
  * Don't fail to create the tarball if locales listed in all-locales don't
    really exist upstream. We already check that everything in shipped-locales
    exists
    - update debian/create-tarball.py
  * Update patches for PRBool -> bool transition
    - refresh debian/patches/firefox-kde.patch
    - refresh debian/patches/mozilla-kde.patch
  * Drop some more hanging IPC xpcshell tests
    - update debian/build/testsuite.mk
  * Borrow functionality from Chromium package to have distro-version
    specific patches
    - update debian/rules
    - add debian/build/enable-dist-patches.pl
  * Don't enable unity-globalmenu-build-support.patch on lucid and maverick
    - update debian/patches/series
  * Remove prerm hook for cleaning up pyc files in the apport package-hooks
    folder. Nothing creates these
    - update debian/firefox.prerm.in
  * Set up alternatives in the postinst script on abort-remove
    - update debian/firefox.postinst.in